[package]
name = "sim_derive"
version = "0.7.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Neal DeBuhr <ndebuhr@gmail.com>"]
description = "Sim is a discrete event simulation package that facilitates Rust- and npm-based simulation products and projects"
homepage = "https://github.com/ndebuhr/sim"
repository = "https://github.com/ndebuhr/sim"
readme = "README.md"
keywords = ["simulation", "discrete", "event", "stochastic", "modeling"]
categories = ["simulation"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
